# AI-Engineering-Pro

Agents/: Self_Reflecting_Agent.ipynb
BackEnd Programming/TypeScript/: Inference_Types.md
Cost minimization/: Token_Time_Budgeting_LangGraphAgentic_AI.ipynb  Token_budgeting_agentic_ai.ipynb
Databases/: Databases-Comparisons.md  Databases.md
LLMs Improvements/: Removing_Hallucination Corrected.ipynb  Removing_Hallucination.ipynb
LangGraphBasics/: LangGraphAPIsToolAgenticAI.ipynb  LangGraphTools.ipynb  LangGraphTutorial.ipynb  LangGraphUsingTools.ipynb
MultimodelDatabaseAIQuery/: MultiModalQUeryWeavate.ipynb  MultiModalQueryWeavate.ipynb
Practical RAG/Semantic Search AMAZON Titan Embedding FAISS/: Semantic Search with LangChain, Amazon Titan Embeddings, and FAISS.ipynb
Practical RAG/Semantic Search HuggingFace Embedding FAISSS/: Semantic Search with LangChain, HuggingFace Embeddings, and FAISS.ipynb
Python Skill/Decorators/: Decorator.md
Python Skill/Typing/: Pydantic python.ipynb  Typing python.ipynb
Python Skill/database/: PostgreSQL_Python_Full_Tutorial.ipynb  PostgreSQL_Python_Full_tutorial.ipynb  PostgreSQL_psycopg_Python_Full_Tutorial.ipynb  SQLAlchemy_Python_Full_tutorial.ipynb  SQLite3_Full_Tutorial.ipynb
Python Skill/functool/: functool_Python.ipynb
Python Skill/lambda/: ambda function Python.ipynb
Python Skill/pytest/: Pytest.ipynb
RAG/: Large-API-Handleing.ipynb  PDF-Parsers.md  PDFRags.ipynb  RAG_Considerations.md  Removing_Hallucination Frome RAG.ipynb  Self-Reflecting-Agent.ipynb
Video Recommendation System/: Video_Recommendation_System.ipynb  Video_Recommendation_System_Template_Base.ipynb  Video_Recommendation_System_Template_base.ipynb
llama-index-readerPro/: Readme.md  llamaindexreaderPro.toml  pyproject.toml
