[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-pro"
version = "0.1.1"
description = "Custom LlamaIndex loader shortcuts with dependency conflict resolution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index-core",
    "fsspec>=2024.1.0,<=2025.3.0",
]

[project.optional-dependencies]
web = ["llama-index-readers-web"]
json = ["llama-index-readers-json"]
db = ["llama-index-readers-database"]
wiki = ["llama-index-readers-wikipedia"]
github = ["llama-index-readers-github"]
google = ["llama-index-readers-google"]
file = ["llama-index-readers-file", "docx2txt"]

# Nested shortcuts to avoid repetition
necessary = [
    "llama-pro[file]",
    "llama-pro[web]",
    "llama-pro[json]",
    "llama-pro[db]"
]

all = [
    "llama-pro[necessary]",
    "llama-pro[wiki]",
    "llama-pro[github]",
    "llama-pro[google]",
    "llama-index-readers-s3",
    "llama-index-readers-notion",
    "llama-index-readers-slack"
]
